--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
+
+    //数据解析
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
+    //Android SQLite操作框架
+    implementation 'org.litepal.guolindev:core:3.1.1'
 }
