--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DemoWork1">
-        <activity android:name=".constraintlayout.TestConstraintLayoutActivity"></activity>
+        <activity android:name=".sqlite.SQLiteTestActivity"></activity>
+        <activity android:name=".constraintlayout.TestConstraintLayoutActivity" />
         <activity android:name=".litepal.LitePalActivity" />
         <activity android:name=".mvvm.TestMvvmActivity" />
         <activity android:name=".headList.RecyclerViewTestActivity" />
