--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
     //Android SQLite操作框架
     implementation 'org.litepal.guolindev:core:3.1.1'
+
+    implementation 'com.tencent:mmkv:1.2.7'
 }
