--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,16 @@ android {
     dataBinding {
         enabled true
     }
+
+    sourceSets {
+        main {
+            java.srcDirs = ['src/main/java']
+            jniLibs.srcDirs = ['libs']
+            assets.srcDirs = ['assets']
+            res.srcDirs = ['src/main/res','src/main/res/layout',
+                           'src/main/res/layout_resize']
+        }
+    }
 }
 
 dependencies {
