--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,17 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [AROUTER_MODULE_NAME: project.getName()]
+            }
+        }
+        kapt {
+            arguments {
+                arg("AROUTER_MODULE_NAME", project.getName())
+            }
+        }
     }
 
     buildTypes {
@@ -115,4 +126,8 @@ dependencies {
     annotationProcessor project(':shapeTest')
     implementation project(path: ':annotationTest')
     annotationProcessor project(':annotationTest')
+
+    implementation 'com.alibaba:arouter-api:1.5.2'
+    kapt 'com.alibaba:arouter-compiler:1.5.2'
+    annotationProcessor 'com.alibaba:arouter-compiler:1.5.2'
 }
