--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DemoWork1">
-        <activity android:name=".sensor.SensorTestActivity"></activity>
+        <activity android:name=".coordinatorlayout.TestCoorActivity"
+            android:label="测试"></activity>
+        <activity android:name=".sensor.SensorTestActivity" />
         <activity android:name=".notification.NotificationActivity" />
         <activity android:name=".simplework.ViewDemoActivity" />
         <activity android:name=".annotation.AnnotationTestActivity" />
