--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,48 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.demowork1">
 
+    <application
+        android:name=".DemoApplication"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.DemoWork1">
+        <activity
+            android:name=".coordinatorlayout.TestCoorActivity"
+            android:label="测试" />
+
+        <activity android:name=".sensor.SensorTestActivity" />
+        <activity android:name=".notification.NotificationActivity" />
+        <activity android:name=".simplework.ViewDemoActivity" />
+        <activity android:name=".annotation.AnnotationTestActivity" />
+        <activity android:name=".testListPages.TestListPageActivity" />
+        <activity android:name=".anim.TestAnimActivity" />
+        <activity android:name=".database.dbflow.DBFlowTestActivity" />
+        <activity android:name=".database.sqlite.SQLiteTestActivity" />
+        <activity android:name=".constraintlayout.TestConstraintLayoutActivity" />
+        <activity android:name=".database.litepal.LitePalActivity" />
+        <activity android:name=".mvvm.TestMvvmActivity" />
+        <activity android:name=".headList.RecyclerViewTestActivity" />
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <receiver
+            android:name=".notification.NotificationReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.demowork1.notification" />
+            </intent-filter>
+        </receiver>
+        <service android:name=".service.MainService"/>
+
+    </application>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -15,46 +57,7 @@
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.SYSTEM_OVERLAY_WINDOW" />
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
-    <application
-        android:name=".DemoApplication"
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.DemoWork1">
-        <activity android:name=".coordinatorlayout.TestCoorActivity"
-            android:label="测试"></activity>
-        <activity android:name=".sensor.SensorTestActivity" />
-        <activity android:name=".notification.NotificationActivity" />
-        <activity android:name=".simplework.ViewDemoActivity" />
-        <activity android:name=".annotation.AnnotationTestActivity" />
-        <activity android:name=".testListPages.TestListPageActivity" />
-        <activity android:name=".anim.TestAnimActivity" />
-        <activity android:name=".database.dbflow.DBFlowTestActivity" />
-        <activity android:name=".database.sqlite.SQLiteTestActivity" />
-        <activity android:name=".constraintlayout.TestConstraintLayoutActivity" />
-        <activity android:name=".database.litepal.LitePalActivity" />
-        <activity android:name=".mvvm.TestMvvmActivity" />
-        <activity android:name=".headList.RecyclerViewTestActivity" />
-
-        <receiver
-            android:name=".notification.NotificationReceiver"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="com.demowork1.notification" />
-            </intent-filter>
-        </receiver>
-
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
 
 </manifest>
