--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,12 @@ buildscript {
         google()
         jcenter()
         maven { url "https://jitpack.io" }
+        mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.8'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
