--- a/app/build.gradle
+++ b/app/build.gradle
@@ -148,6 +148,7 @@ dependencies {
 
     implementation 'com.google.protobuf:protobuf-java:3.5.1'
     implementation 'com.google.protobuf:protoc:3.5.1'
+    implementation 'com.iqiyi.xcrash:xcrash-android-lib:3.0.0'
 }
 
 protobuf {
