--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.demowork1">
 
+    <uses-feature android:name="android.hardware.usb.host"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -32,6 +33,7 @@
             android:exported="true"></service>
 
         <activity android:name=".service.ServiceActivity" />
+        <activity android:name=".usb.UsbTestActivity" />
         <activity
             android:name=".coordinatorlayout.TestCoorActivity"
             android:label="测试" />
