--- a/singlework/build.gradle
+++ b/singlework/build.gradle
@@ -1,14 +1,19 @@
-plugins {
-    id 'com.android.library'
-    id 'kotlin-android'
-    id 'kotlin-kapt'
+if (Integer.valueOf(runModule) == 2) {
+    apply plugin: 'com.android.application'
+} else {
+    apply plugin: 'com.android.library'
 }
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
     defaultConfig {
+        if (Integer.valueOf(runModule) == 2) {
+            applicationId "com.example.demowork1"
+        }
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
@@ -44,6 +49,9 @@ android {
     }
     viewBinding {
         enabled = true
+    }
+    dataBinding {
+        enabled true
     }
 }
 
