--- a/gradle.properties
+++ b/gradle.properties
@@ -19,5 +19,5 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
-#控制运行哪个模块(1：运行app模块 2：运行singleWork模块
-runModule=2
+#控制运行哪个模块(app：运行app模块 singlework：运行singleWork模块
+runModule=singlework
